fix lot buttons

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -32,10 +32,10 @@
         <div class="card-body pt-3">
           <!-- Bordered Tabs -->
 
-          <div class="d-flex align-items-center justify-content-between">
-            <h3><a href="{{ url_for('inventory.lot_edit', id=lot.id) }}">{{ lot.name }}</a></h3>
+          <div class="d-flex align-items-center justify-content-between row">
+            <h3 class="col-sm-12 col-md-5"><a href="{{ url_for('inventory.lot_edit', id=lot.id) }}">{{ lot.name }}</a></h3>
 
-            <div><!-- lot actions -->
+            <div class="col-sm-12 col-md-7 d-md-flex justify-content-md-end"><!-- lot actions -->
               {% if lot.is_temporary %}
                 <span class="d-none" id="activeRemoveLotModal" data-bs-toggle="modal" data-bs-target="#btnRemoveLots"></span>
                 <a class="me-2" href="javascript:newTrade('user_from')">
