--- a/ereuse_devicehub/templates/labels/label_list.html
+++ b/ereuse_devicehub/templates/labels/label_list.html
@@ -19,7 +19,7 @@
         <div class="card-body pt-3">
           <!-- Bordered Tabs -->
 
-            <div class="btn-group dropdown ml-1">
+            <div class="btn-group dropdown m-1">
               <a href="{{ url_for('labels.tag_add')}}" type="button" class="btn btn-primary">
                 <i class="bi bi-plus"></i>
                 Create Named Tag
@@ -27,7 +27,7 @@
               </a>
             </div>
 
-            <div class="btn-group dropdown ml-1" uib-dropdown="">
+            <div class="btn-group dropdown m-1" uib-dropdown="">
               <a href="{{ url_for('labels.tag_unnamed_add')}}" type="button" class="btn btn-primary">
                 <i class="bi bi-plus"></i>
                 Create UnNamed Tag
