--- a/ereuse_devicehub/static/css/style.css
+++ b/ereuse_devicehub/static/css/style.css
@@ -1082,3 +1082,25 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 13px;
   color: #012970;
 }
+
+/*--------------------------------------------------------------
+# LotsSelector
+--------------------------------------------------------------*/
+
+#dropDownLotsSelector {
+  max-height: 500px;
+}
+
+#dropDownLotsSelector > ul#LotsSelector {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  min-width: max-content;
+  height: 40vh;
+  overflow-y: auto;
+}
+
+#dropDownLotsSelector #ApplyDeviceLots {
+  padding-top: 0px;
+  padding-bottom: 5px;
+}
