--- a/ereuse_devicehub/static/css/style.css
+++ b/ereuse_devicehub/static/css/style.css
@@ -1096,7 +1096,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   min-width: max-content;
-  height: 40vh;
+  max-height: 40vh;
   overflow-y: auto;
 }
 
