--- a/ereuse_devicehub/templates/labels/print_labels.html
+++ b/ereuse_devicehub/templates/labels/print_labels.html
@@ -75,13 +75,13 @@
               </div>
               <div class="row mt-5">
                 <div class="col-lg-3 col-md-4">
-                    <a href="javascript:printpdf()" class="btn btn-success">Print</a>
+                    <a href="javascript:printpdf()" class="btn btn-success">Print labels</a>
                 </div>
                 <div class="col-lg-3 col-md-4">
-                    <a href="javascript:save_size()" class="btn btn-primary">Save</a>
+                    <a href="javascript:save_size()" class="btn btn-primary">Save label size</a>
                 </div>
                 <div class="col-lg-3 col-md-4">
-                    <a href="javascript:reset_size()" class="btn btn-danger">Reset</a>
+                    <a href="javascript:reset_size()" class="btn btn-danger">Reset label size</a>
                 </div>
               </div>
 
