Split custom CSS & niceadmin theme CSS
Keep original source Nice Admin template to keep easy future updates

--- a/ereuse_devicehub/templates/ereuse_devicehub/base.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base.html
@@ -28,6 +28,7 @@
 
 
   <!-- Template Main CSS File -->
+  <link href="{{ url_for('static', filename='css/niceadmin.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
   <!-- =======================================================
@@ -53,7 +54,7 @@
   <!-- Api backend -->
   <script>
     const API_URLS = {
-      Auth_Token: `Basic ${btoa("{{ current_user.token }}:")}`, // 
+      Auth_Token: `Basic ${btoa("{{ current_user.token }}:")}`, //
       currentUserID: "{{ current_user.id }}",
       lots: "{{ url_for('Lot.main') }}",
       lots_detail: "{{ url_for('inventory.lotdevicelist', lot_id='ReplaceTEXT') }}",
