change tags for unique identifiers

--- a/ereuse_devicehub/templates/inventory/addDevicestag.html
+++ b/ereuse_devicehub/templates/inventory/addDevicestag.html
@@ -3,14 +3,14 @@
     <div class="modal-content">
 
       <div class="modal-header">
-        <h5 class="modal-title">Adding to a tag</h5>
+        <h5 class="modal-title">Adding to a unique identifier</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
       <form action="{{ url_for('inventory.tag_devices_add') }}" method="post">
       {{ form_tag_device.csrf_token }}
         <div class="modal-body">
-          Please write a name of a tag
+          Please write a name of a unique identifier
           <select class="form-control selectpicker" id="selectTag" name="tag" data-live-search="true">
             {% for tag in tags %}
             <option value="{{ tag.id }}">{{ tag.id }}</option>
@@ -18,7 +18,7 @@
           </select>
           <input class="devicesList" type="hidden" name="device" />
           <p class="text-danger pol">
-              You need select first one device and only one for add this in a tag
+              You need select first one device and only one for add this in a unique identifier
           </p>
         </div>
 
