--- a/ereuse_devicehub/templates/labels/label_list.html
+++ b/ereuse_devicehub/templates/labels/label_list.html
@@ -22,7 +22,7 @@
             <div class="btn-group dropdown m-1">
               <a href="{{ url_for('labels.tag_add')}}" type="button" class="btn btn-primary">
                 <i class="bi bi-plus"></i>
-                Create Named Tag
+                Create Named Unique Identifier
                 <span class="caret"></span>
               </a>
             </div>
@@ -30,7 +30,7 @@
             <div class="btn-group dropdown m-1" uib-dropdown="">
               <a href="{{ url_for('labels.tag_unnamed_add')}}" type="button" class="btn btn-primary">
                 <i class="bi bi-plus"></i>
-                Create UnNamed Tag
+                Create UnNamed Unique Identifier
                 <span class="caret"></span>
               </a>
             </div>
@@ -53,7 +53,7 @@
                     {% for tag in tags %}
                     <tr>
                       <td><a href="{{ url_for('labels.label_details', id=tag.id) }}">{{ tag.id }}</a></td>
-                      <td>{% if tag.provider %}Unnamed tag {% else %}Named tag{% endif %}</td>
+                      <td>{% if tag.provider %}Unnamed unique Identifier {% else %}Named unique identifier{% endif %}</td>
                       <td>{{ tag.get_provider }}</td>
                       <td>
                         {% if tag.device %}
