--- a/ereuse_devicehub/templates/labels/tag_create.html
+++ b/ereuse_devicehub/templates/labels/tag_create.html
@@ -5,7 +5,7 @@
   <h1>{{ title }}</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{ url_for('labels.label_list')}}">Tag management</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('labels.label_list')}}">Unique Identifier management</a></li>
       <li class="breadcrumb-item">{{ page_title }}</li>
     </ol>
   </nav>
@@ -19,8 +19,8 @@
               <div class="card-body">
 
                 <div class="pt-4 pb-2">
-                  <h5 class="card-title text-center pb-0 fs-4">Add a new Tag</h5>
-                  <p class="text-center small">Please enter a code for the tag.</p>
+                  <h5 class="card-title text-center pb-0 fs-4">Add a new Unique Identifier</h5>
+                  <p class="text-center small">Please enter a code for the unique identifier.</p>
                   {% if form.form_errors %}
                   <p class="text-danger">
                     {% for error in form.form_errors %}
@@ -37,7 +37,7 @@
                     <label for="code" class="form-label">code</label>
                     <div class="input-group has-validation">
                       <input type="text" name="code" class="form-control" required value="{{ form.code.data|default('', true) }}">
-                      <div class="invalid-feedback">Please enter a code of the tag.</div>
+                      <div class="invalid-feedback">Please enter a code of the unique identifier.</div>
                     </div>
                     {% if form.code.errors %}
                     <p class="text-danger">
