--- a/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
@@ -27,11 +27,16 @@
 
     </div>
 
-    <div class="col-xl-8"><!-- TODO (hidden until is implemented )-->
+    <div class="col-xl-8">
 
       <div class="card">
         <div class="card-body pt-3">
           <!-- Bordered Tabs -->
+          <ul class="nav nav-tabs nav-tabs-bordered">
+            <li class="nav-item">
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
+            </li>
+          </ul>
           <div class="tab-content pt-2">
 
             <div class="tab-pane fade show active pt-3" id="profile-change-password">
