Select full list devices

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -297,6 +297,10 @@
               </div>
               {% endif %}
 
+              <div id="select-devices-info" class="alert alert-info mb-0 mt-3 d-none" role="alert">
+                You selected {devices-selected} devices. <u><a href="#" class="alert-link">Select all devices ({total-devices})</a></u>
+              </div>
+
               <div class="tab-content pt-2">
                 <form method="get">
                   <div class="d-flex mt-4 mb-4">
