--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -6,7 +6,7 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="{{ url_for('inventory.devicelist')}}" class="logo d-flex align-items-center">
-      <img src="{{ url_for('static', filename='img/usody-logo-black.svg') }}" alt="">
+      <img src="{{ url_for('static', filename='img/logo_usody_clock.png') }}" alt="">
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
