--- a/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
@@ -13,7 +13,7 @@
 
             <div class="d-flex justify-content-center py-4">
               <a href="{{ url_for('core.login') }}" class="logo d-flex align-items-center w-auto">
-                <img src="{{ url_for('static', filename='img/usody-logo-black.svg') }}" alt="">
+                <img src="{{ url_for('static', filename='img/logo_usody_clock.png') }}" alt="">
               </a>
             </div><!-- End Logo -->
 
