--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -27,6 +27,10 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" href="{{ device.public_link }}" target="_blank">Web</a>
+            </li>
+
+            <li class="nav-item">
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#status">Status</button>
             </li>
 
