Fix text select lots instead devices

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -84,7 +84,7 @@
                 </button>
                 <span class="d-none" id="activeTradeModal" data-bs-toggle="modal" data-bs-target="#tradeLotModal"></span>
                 <ul class="dropdown-menu" aria-labelledby="btnLots" id="dropDownLotsSelector">
-                  <h6 class="dropdown-header">Select some devices to manage lots</h6>
+                  <h6 class="dropdown-header">Select lots where to store the selected devices</h6>
                   <ul class="mx-3" id="LotsSelector"></ul>
                   <li><hr /></li>
                   <li>
